src/test/deca/syntax/invalid/created/int-error.deca
{
    int a  = 100000000000;
    int b = 1000000000;
    int c= a*b;
}